# Industrial-Cloud-Storage-System

./: .gitignore  CLAUDE.md  CMakeLists.txt  CloudiskServer.cpp  CloudiskServer.h  CryptoUtil.cpp  CryptoUtil.h  OssManager.cpp  OssManager.h  README.md  User.h  UserService.cpp  UserService.proto  UserService.srpc.h  Util.h  backup.cpp  docker-compose.yml  main.cpp  start.sh
backend/sql/: migration_v1.sql  migration_v2.sql  migration_v3.sql  migration_v4.sql
backend/src/handler/: AuthHandler.cpp  AuthHandler.h  FavoriteHandler.cpp  FavoriteHandler.h  FileHandler.cpp  FileHandler.h  SearchHandler.cpp  SearchHandler.h  ShareHandler.cpp  ShareHandler.h  TrashHandler.cpp  TrashHandler.h
backend/src/middleware/: Auth.h
backend/src/model/: FileRecord.h
backend/src/search/: InvertedIndex.cpp  InvertedIndex.h  TextExtractor.cpp  TextExtractor.h  Tokenizer.cpp  Tokenizer.h
backend/src/service/: FileService.h  StorageService.h
backend/src/util/: Logger.h  Response.h
client/: CMakeLists.txt
client/src/: MainWindow.cpp  MainWindow.h  main.cpp
client/src/models/: FileItem.h  UserInfo.h
client/src/network/: ApiEndpoints.h  NetworkManager.cpp  NetworkManager.h
client/src/pages/: HomePage.cpp  HomePage.h  ShareDialog.cpp  ShareDialog.h  ShareListPage.cpp  ShareListPage.h  SignInPage.cpp  SignInPage.h  SignUpPage.cpp  SignUpPage.h  TransferListPage.cpp  TransferListPage.h  TransferPanel.cpp  TransferPanel.h  TrashPage.cpp  TrashPage.h
client/src/preview/: ImagePreviewWidget.cpp  ImagePreviewWidget.h  PdfPreviewWidget.cpp  PdfPreviewWidget.h  PreviewDialog.cpp  PreviewDialog.h  TextPreviewWidget.cpp  TextPreviewWidget.h  VideoPreviewWidget.cpp  VideoPreviewWidget.h
client/src/styles/: ThemeManager.h
lib/SimpleAmqpClient-2.5.1/build_dir/: Makefile  libSimpleAmqpClient.pc
lib/cppjieba/cppjieba/: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
lib/cppjieba/cppjieba/include/cppjieba/: DictTrie.hpp  HMMModel.hpp  Jieba.hpp  KeywordExtractor.hpp  PosTagger.hpp  PreFilter.hpp  SegmentBase.hpp  Unicode.hpp
lib/cppjieba/cppjieba/test/: CMakeLists.txt  load_test.cpp  test_paths.h.in
lib/cppjieba/cppjieba/test/unittest/: CMakeLists.txt  jieba_test.cpp  keyword_extractor_test.cpp  pos_tagger_test.cpp  segments_test.cpp  textrank_test.cpp  trie_test.cpp  unicode_test.cpp
lib/rabbitmq-c-0.11.0/build_dir/: CMakeCache.txt  cmake_install.cmake  install_manifest.txt  rabbitmq-targets.cmake
lib/rabbitmq-c-0.11.0/build_dir/librabbitmq/: cmake_install.cmake  config.h  librabbitmq.4.5.0.dylib  librabbitmq.4.dylib
lib/wfrest/example/: 28_redirect.cc
lib/wfrest/mac_build/: config.toinstall.cmake
lib/workflow/: cmake_install.cmake
lib/workflow/mac_build/: CMakeCache.txt  Makefile  cmake_install.cmake  config.toinstall.cmake  install_manifest.txt
lib/workflow/mac_build/src/: Makefile  cmake_install.cmake
lib/workflow/mac_build/src/client/: Makefile  cmake_install.cmake
lib/workflow/mac_build/src/factory/: Makefile  cmake_install.cmake
lib/workflow/mac_build/src/kernel/: Makefile  cmake_install.cmake
lib/workflow/mac_build/src/manager/: Makefile  cmake_install.cmake
lib/workflow/mac_build/src/nameservice/: Makefile  cmake_install.cmake
lib/workflow/mac_build/src/protocol/: Makefile  cmake_install.cmake
lib/workflow/mac_build/src/server/: Makefile  cmake_install.cmake
lib/workflow/mac_build/src/util/: Makefile  cmake_install.cmake
static/view/: home.html  index.html  signin.html  signup.html
web/: index.html
web/css/: app.css
web/js/: api.js  app.js  store.js  utils.js
web/js/components/: FileTable.js  FileToolbar.js
web/js/views/: AuthView.js  DashboardView.js
